--- a/platformio.ini
+++ b/platformio.ini
@@ -8,25 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [platformio]
-default_envs = esp32
+default_envs = m5stack-atom
 
-[env:esp32]
+[env:m5stack-atom]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = m5stack-atom
 framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
-; Uncomment this line to allow for remote upgrade. If name resolution does not work for you, replace with the IP of ESPAltherma
-upload_port = ESPAltherma.local
-; Uncomment this line if you want to define the protocol. Autodetected otherwise.
-upload_protocol = espota
-
+upload_port = COM4
 lib_deps =
-	PubSubClient
-
-[env:native]
-# Used to run unit test; g++ must be in PATH.
-platform = native
-build_flags = "-std=c++11"
+    m5stack/M5Atom @ ^0.1.0
+    fastled/FastLED @ ^3.5.0
+    knolleary/PubSubClient@^2.8
