Use OTA for updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ monitor_speed = 115200
 upload_speed = 115200
 ; upload_port = COM4
 upload_port = 192.168.1.172
+upload_protocol = espota
 lib_deps =
     m5stack/M5Atom @ ^0.1.0
     fastled/FastLED @ ^3.5.0
